# magnets

./: Dockerfile  LICENSE  README.md  ashby.py  chemical_name_formatter.py  clean_df.csv  clean_df2.csv  clean_pickle.df  clean_pickle2.df  corr.py  dosplot.py  embed_multiple.html  embed_multiple.py  embed_multiple_responsive.html  embed_multiple_responsive.py  embed_responsive2.py  embed_responsive_width_height.html  experimental_data.csv  flaskproxy.sublime-workspace  gunicorn_log_22Aug17_16Aug17.txt  magnet_database.csv  magnet_main.py  nginx.conf  pickled_panda6.df  pickled_predictions4.df  prep_df.py  prep_df2.py  pyproject.toml  requirements.txt  resources.py  table_page.py  todo.txt  unicorn_stdout_log.txt  wsgi.py
.github/workflows/: build.yml
dos_data/: copy_dos.sh  copy_dos.sh~  copy_dos_preds.sh  dirs_preds.txt  dirs_preds.txt~  make_folders.sh  predict_runs.txt  runs.txt
dos_data/FeRu2Sn/: Untitled.ipynb  bokeh_dostest.py  bokeh_dostest_11Mar.py  bokeh_dostest_14Mar.py  bokeh_dostest_16Mar.py  scatter.html
static/: corrplot.css  engr_styles.css  navbar.css
stuff/: columns.xlsx
templates/: about.html  ashby.html  base.html  corr.html  datatable.html  dos.html  index.html  index_bootstrap.html
